[package]
name = "mdbook-all-the-markdowns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
clap = "2.33.3"
log = "0.4.14"
mdbook = "0.4.13"
semver = "1.0.4"
serde_json = "1.0.68"
toml = "0.5.8"
walkdir = "2.3.2"

[[example]]
name = "finder"
