[package]
name = "mdbook-all-the-markdowns"
description = "Render all markdown files in a given folder structure"
license = "MIT"
version = "0.2.0"
edition = "2018"
homepage = "https://github.com/bombsimon/mdbook-all-the-markdowns"
repository = "https://github.com/bombsimon/mdbook-all-the-markdowns"

[dependencies]
Inflector = "0.11.4"
clap = "2.33.3"
log = "0.4.14"
mdbook = "0.4.13"
semver = "1.0.4"
serde_json = "1.0.68"
toml = "0.5.8"
walkdir = "2.3.2"

[[example]]
name = "finder"
