[package]
name = "mdbook-all-the-markdowns"
description = "Render all markdown files in a given folder structure"
license = "MIT"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/bombsimon/mdbook-all-the-markdowns"
repository = "https://github.com/bombsimon/mdbook-all-the-markdowns"

[dependencies]
Inflector = "0.11.4"
clap = "4.0.18"
env_logger = "0.9.1"
log = "0.4.17"
mdbook = "0.4.21"
regex = "1.6.0"
semver = "1.0.14"
serde_json = "1.0.87"
toml = "0.5.9"
walkdir = "2.3.2"

[[example]]
name = "finder"
